Update projects list part

--- a/style.css
+++ b/style.css
@@ -399,6 +399,16 @@ Home & content
 	transform: scale(1.1);
 }
 
+.client-logo:hover h3 {
+	transition: 0.3s;
+	font-size: 21px;
+}
+
+.client-logo:hover p {
+	transition: 0.3s;
+	font-size: 11px;
+}
+
 #services {
 	text-align: center;
 	position: relative;
